feat: :sparkles: Web Componentns
add event listenners to the web components

--- a/components/my-selection.html
+++ b/components/my-selection.html
@@ -1,4 +1,5 @@
 <div>
-    <p>My Selection</p>
+    <div class="hed">
+        <button href="">G A N A S T E U N P A N D A !</button>
+    </div>
 </div>
-
